# DweepLang

./: .gitignore  README.md  README.txt  download.py  pyproject.toml  requirements.txt  run.bat  run.sh
frontend/: index.html
models/en-hi/: config.json  generation_config.json
models/hi-en/: config.json  generation_config.json  tokenizer_config.json
server/: app.py  utils.py
